# bhd-rss-bot

./: Cargo.toml  Dockerfile  README.md  build.md
src/: config.rs  main.rs  rss.rs
src/tests/: rss-example.xml
