[package]
name = "bhd-rss-bot"
version = "0.1.0"
authors = ["bitstuff <bitstuff37git.mailinator.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hashbrown = { version = "0.9" }
regex = { version = "1.4" }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = { version = "0.4" }
reqwest = { version = "0.10", features = ["blocking", "json"] }
toml = { version = "0.4" }