[package]
name = "bhd-rss-bot"
version = "0.1.0"
authors = ["bitstuff <bitstuff37git.mailinator.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bhd-rss-bot"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hashbrown = { version = "0.11" }
regex = { version = "1.6" }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = { version = "0.6" }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
toml = { version = "0.5" }
